crates/vize_glyph/src/snapshots/vize_glyph__template__tests__directive_shorthand_v_bind.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<div :class="active"></div>
