crates/vize_glyph/src/snapshots/vize_glyph__template__tests__directive_shorthand_v_slot.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<template #default="props">
</template>
