crates/vize_glyph/src/snapshots/vize_glyph__template__tests__dynamic_directive_shorthand_snapshot.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<button :[name]="value" @[event]="handler">{{ label }}</button>
