crates/vize_glyph/src/snapshots/vize_glyph__template__tests__format_nested_template.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<div>
  <span>
    Hello
  </span>
</div>
