crates/vize_glyph/src/snapshots/vize_glyph__template__tests__html_comment.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<!-- This is a comment -->
<div>
  Content
</div>
