crates/vize_glyph/src/snapshots/vize_glyph__template__tests__normalize_directive_shorthands_disabled.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<div v-bind:class="active" v-on:click="handler">
</div>
